[gd_scene load_steps=2 format=2]

[ext_resource path="res://TrackBotBuilder/UI/TBOptions.gd" type="Script" id=1]

[node name="TBOptions" type="MarginContainer"]
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 212.0
margin_bottom = 600.0
color = Color( 0.219608, 0.219608, 0.219608, 0.752941 )

[node name="MC" type="MarginContainer" parent="."]
margin_right = 212.0
margin_bottom = 600.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBC" type="VBoxContainer" parent="MC"]
margin_left = 8.0
margin_top = 8.0
margin_right = 204.0
margin_bottom = 592.0
rect_min_size = Vector2( 196, 0 )

[node name="Label" type="Label" parent="MC/VBC"]
margin_right = 196.0
margin_bottom = 14.0
text = "Player Name:"

[node name="PlayerName" type="LineEdit" parent="MC/VBC"]
margin_top = 18.0
margin_right = 196.0
margin_bottom = 42.0
placeholder_text = "Enter Name"

[node name="HSeparator" type="HSeparator" parent="MC/VBC"]
margin_top = 46.0
margin_right = 196.0
margin_bottom = 50.0

[node name="TBBody" type="MenuButton" parent="MC/VBC"]
margin_top = 54.0
margin_right = 196.0
margin_bottom = 74.0
focus_mode = 2
text = "Select Body"
flat = false

[node name="TBBooster" type="MenuButton" parent="MC/VBC"]
margin_top = 78.0
margin_right = 196.0
margin_bottom = 98.0
focus_mode = 2
text = "Select Booster"
flat = false

[node name="TBWM" type="MenuButton" parent="MC/VBC"]
margin_top = 102.0
margin_right = 196.0
margin_bottom = 122.0
focus_mode = 2
text = "Select Mount"
flat = false

[node name="TBLeftWeapon" type="MenuButton" parent="MC/VBC"]
margin_top = 126.0
margin_right = 196.0
margin_bottom = 146.0
focus_mode = 2
disabled = true
text = "Select Left Hand Weapon"
flat = false

[node name="TBRightWeapon" type="MenuButton" parent="MC/VBC"]
margin_top = 150.0
margin_right = 196.0
margin_bottom = 170.0
focus_mode = 2
disabled = true
text = "Select Right Hand Weapon"
flat = false

[node name="EnterArena" type="Button" parent="MC/VBC"]
margin_top = 174.0
margin_right = 196.0
margin_bottom = 194.0
disabled = true
text = "Enter Arena"

[connection signal="text_changed" from="MC/VBC/PlayerName" to="." method="_on_PlayerName_text_changed"]
[connection signal="pressed" from="MC/VBC/EnterArena" to="." method="_on_EnterArena_pressed"]
